--- a/index.html
+++ b/index.html
@@ -6009,8 +6009,8 @@ flexibility(document.documentElement);
 										class="eael-post-elements-readmore-btn">Read More</a></div>
 								</div><div class="eael-entry-footer"><div class="eael-entry-meta"></div></div></div></div>
 					</div>
-				</article></div>
-</div>
+				</article>
+				</div>
             <div class="clearfix"></div>
         </div>            <div class="eael-load-more-button-wrap eael-force-hide">
                 <button class="eael-load-more-button" id="eael-load-more-btn-93758c0" data-widget-id="93758c0" data-widget="93758c0" data-page-id="7" data-nonce="90246a4a69" data-template="{&quot;dir&quot;:&quot;lite&quot;,&quot;file_name&quot;:&quot;default.php&quot;,&quot;name&quot;:&quot;Post-Grid&quot;}" data-class="Essential_Addons_Elementor\Elements\Post_Grid" data-layout="grid" data-page="1" data-args="orderby=date&amp;order=desc&amp;ignore_sticky_posts=1&amp;post_status=publish&amp;posts_per_page=50&amp;offset=0&amp;post_type=post" data-max-page="10">
